--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "firebase": "^12.3.0",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "reselect": "^5.1.1",
